tests/fixtures/errors/public_alias_collision.z
# A public alias name that collides with another real member is rejected: `x`
# is a field, so exposing `y` under the name `x` is ambiguous.
point: record { x: i64 y: i64 } as {
    public: unit { x: y }
}

main: function is {
    p: point x: 1 y: 2
    print "\{p.x}"
}
